--- a/style.css
+++ b/style.css
@@ -34,11 +34,9 @@ body {
   gap: 1rem;
 }
 
-.form label {
- 
-}
 
-.form label input {
+
+.form input {
   width: 100%;
   padding: 10px 10px 20px 10px;
 
